--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<body background="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/RickAndMorty.jpg?itok=SKjyrI8t&resize=1100x1100">
+
 <html1>
 <body>
 <h1>hello github pages</h1>
