--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<body background="https://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/RickAndMorty.jpg?itok=SKjyrI8t&resize=1100x1100">
+<style>
+body{
+margin:0px;
+padding:0px;
+background:#fff url(https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg) center center fixed no-repeat;　//設定背景圖片的呈現方式
+background-size: cover;　//設定背景圖片的填滿方式
+}        
+</style>
 
 <html1>
 <body>
