--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
-<style>
-body{
-margin:0px;
-padding:0px;
-background:#fff url(https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg) center center fixed no-repeat;　//設定背景圖片的呈現方式
-background-size: cover;　//設定背景圖片的填滿方式
-}        
-</style>
+<body>
+    <img src="https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg" id="bg-img">
+</body>
+
+ <style>
+        #bg-img {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            z-index: -99;
+        }
+    </style>
+<script>
+    $(function () {
+
+        resize_tab();
+    });
+
+    $(window).resize(function () {
+        resize_tab();
+    }).resize();
+
+    function resize_tab() {
+
+        var viewportWidth = $(window).innerWidth();
+        var viewportHeight = $(window).innerHeight();
+
+        var width = $('#bg-img').width();
+        var height = $('#bg-img').height();
+
+
+        if ((viewportWidth / viewportHeight) > (width / height)) {
+
+            $('#bg-img').css({
+                'width': '100%',
+                'height': 'auto',
+                'margin-left': 0 - width / 2,
+                'margin-top': 0 - height / 2
+            });
+
+
+        } else {
+            $('#bg-img').css({
+                'width': 'auto',
+                'height': '100%',
+                'margin-left': 0 - width / 2,
+                'margin-top': 0 - height / 2
+            });
+        }
+    }
+</script>
 
 <html1>
 <body>
