--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         
         <script type="text/javascript"> 
 	        $(document).ready(function(){
-		        $(".flip").hover(function(){
-		        $(".panel").slideToggle("slow");
+		        $(".flip").click(function(){
+		        	$(".panel").slideToggle("slow");
 		        });
 	        });
         </script>
@@ -44,11 +44,12 @@
 <html1>
 <body>
         <h1>hello github pages</h1>
+	<p class="flip">Click here!!</p>
         <div class="panel">
-		<p>W3School - 领先的 Web 技术教程站点</p>
-		<p>在 W3School，你可以找到你所需要的所有网站建设教程。</p>
+		<p>AAAAAAAAA</p>
+		<p>不是阿</p>
 	</div>
 		 
-	<p class="flip">请点击这里</p>
+
 </body>
 </html>
