--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 		        text-align:center;
 		        background:#e5eecc;
 		        border:solid 1px #c3c3c3;
+			width:300px
 		}
 		div.panel{
-		        height:120px;
+		        height:150px;
 		        display:none;
 		}
 	</style>
