--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
 
 <html1>
 <body>
+	<div>
         <h1>hello github pages</h1>
-	
+	</div>
+		
 	<p class="flip">Click here!!</p>
         <div class="panel">
 			<p>AAAAAAAAA</p>
