--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@
 <html1>
 <body>
 	<div>
-        <h1>hello github pages</h1>
-	</div>
-		
-	<p class="flip">Click here!!</p>
-        <div class="panel">
+        	<h1>hello github pages</h1>
+	
+		<h3 class="text-primary text-center">jQuery Playground</h3>
+		<p class="flip">Click here!!</p>
+        	<div class="panel">
 			<p>AAAAAAAAA</p>
 			<p>不是阿</p>
 		</div>
+	</div>
 		 
 
 </body>
