--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 <html1>
 <body>
 	<div>
-        	<h1>hello github pages</h1>
-	
-		<h3 class="text-primary text-center">jQuery Playground</h3>
+        	<h1 style="text-align: center;">hello github pages</h1>
 		<p class="flip">Click here!!</p>
         	<div class="panel">
 			<p>AAAAAAAAA</p>
