--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
 	<div id="abc">
         	<h1 style="text-align: center;">hello github pages</h1>
-		<p class="flip">Click here!!</p>
+		<p class="flip">Click here!!<style = "text-align: center;"></p>
         	<div class="panel">
 			<p>AAAAAAAAA</p>
 			<p>不是阿</p>
