--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         	$(".test1").fadeToggle();
         	$(".test2").fadeToggle('fast');
         	$(".test3").fadeToggle('slow');
-        	$(".test4").fadeToggle(2500);
+        	$(".test4").fadeToggle('slow');
       		})
     		});
 	 </script>
