--- a/index.html
+++ b/index.html
@@ -67,12 +67,14 @@
 				</div>
       			</div>
     		</div>
+		<div>
+		</div>
     		<div class="col-xs-6">
-			<button class="click">可利可蜜</button>
-			<p class="test1">Hello!! My name is Andy.</p>
-			<p class="test2">Hello!! My name is Andy.</p>
-			<p class="test3">Hello!! My name is Andy.</p>
-			<p class="test4">Hello!! My name is Andy.</p>
+			<button class="click">clicl</button>
+			<p class="test1">Hexo不能用</p>
+			<p class="test2">只能重頭</p>
+			<p class="test3">重新寫一個</p>
+			<p class="test4">QQ</p>
     		</div>
   	</div>	 
 
