--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<p class="test4">QQ</p>
     		</div>
   	</div>
-	<img src="https://gss0.baidu.com/9fo3dSag_xI4khGko9WTAnF6hhy/zhidao/pic/item/e61190ef76c6a7efd49cf18dfbfaaf51f2de66e6.jpg">
+	<img src="https://i.imgur.com/5c21LI5.gif">
 
 </body>
 </html>
