--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     height=450px;
     frameborder=0; 
     style="border:0"
-    src="https://www.google.com/maps/embed/v1/view?key=你的金鑰&zoom=14&center=25.033952,121.564360&maptype=satellite">
+    src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBSkufNPfQYwVOfSqrM514dst-kIgRQCUk&zoom=14&center=25.033952,121.564360&maptype=satellite">
   </iframe>
         
 </head>
