--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
-<html1>
+
+<style>
+	body{
+	    background-image: url(https://www.taiwan.net.tw/att/1/big_scenic_spots/pic_412_8.jpg);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+            background-size: cover;
+	}
+</style>
+
+<body>
 <head>
   <iframe
     width=100%;
@@ -11,10 +22,11 @@
         
 </head>
 
-<html1>
-<body>
 
-	<img src="https://i.imgur.com/5c21LI5.gif">
+<div class="giff">
+    <img src="https://i.imgur.com/5c21LI5.gif">
+</div>
+
 
 </body>
 </html>
