--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 
 <body>
 <head>
+    <h1>GOOGLE MAP</h1>      
+</head>
   <iframe
     width=100%;
     height=450px;
     frameborder=0; 
     style="border:0"
-    src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBSkufNPfQYwVOfSqrM514dst-kIgRQCUk&zoom=14&center=25.033952,121.564360&maptype=satellite">
+    src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBSkufNPfQYwVOfSqrM514dst-kIgRQCUk&zoom=14&center=25.032838,121.433727&maptype=satellite">
   </iframe>
-        
-</head>
-
 
 <div class="giff">
     <img src="https://i.imgur.com/5c21LI5.gif">
@@ -30,3 +29,4 @@
 
 </body>
 </html>
+
