--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
             background-position: center;
             background-size: cover;
 	}
+    iframe{
+        width=100%;
+        height=450px;
+        border:0;
+    }
 </style>
 
 <body>
@@ -15,10 +20,7 @@
     <h1>GOOGLE MAP</h1>      
 </head>
   <iframe
-    width=100%;
-    height=450px;
-    frameborder=0; 
-    style="border:0"
+    frameborder=0;
     src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBSkufNPfQYwVOfSqrM514dst-kIgRQCUk&zoom=14&center=25.032838,121.433727&maptype=satellite">
   </iframe>
 
@@ -29,4 +31,3 @@
 
 </body>
 </html>
-
