--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
             background-position: center;
             background-size: cover;
 	}
-    iframe{
-        width=100%;
-        height=450px;
-        border:0;
-    }
+
 </style>
 
 <body>
@@ -20,7 +16,10 @@
     <h1>GOOGLE MAP</h1>      
 </head>
   <iframe
-    frameborder=0;
+    width=100%;
+    height=450px;
+    frameborder=0; 
+    style="border:0"
     src="https://www.google.com/maps/embed/v1/view?key=AIzaSyBSkufNPfQYwVOfSqrM514dst-kIgRQCUk&zoom=14&center=25.032838,121.433727&maptype=satellite">
   </iframe>
 
